tests/snapshots/snapshots__strsim.snap
---
source: tests/snapshots.rs
expression: output
---
pub use __cargo_equip::prelude::*;

fn main() {
    assert_eq!(Ok(1), strsim::hamming("abc", "abd"));
}

// The following code was expanded by `cargo-equip`.

///  # Bundled libraries
/// 
///  - `registry+https://github.com/rust-lang/crates.io-index#strsim@0.10.0` licensed under `MIT` as `crate::__cargo_equip::crates::strsim`
/// 
///  # License and Copyright Notices
/// 
///  - `registry+https://github.com/rust-lang/crates.io-index#strsim@0.10.0`
/// 
///      ```text
///      The MIT License (MIT)
/// 
///      Copyright (c) 2015 Danny Guo
///      Copyright (c) 2016 Titus Wormer <tituswormer@gmail.com>
///      Copyright (c) 2018 Akash Kurdekar
/// 
///      Permission is hereby granted, free of charge, to any person obtaining a copy
///      of this software and associated documentation files (the "Software"), to deal
///      in the Software without restriction, including without limitation the rights
///      to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
///      copies of the Software, and to permit persons to whom the Software is
///      furnished to do so, subject to the following conditions:
/// 
///      The above copyright notice and this permission notice shall be included in all
///      copies or substantial portions of the Software.
/// 
///      THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
///      IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
///      FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
///      AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
///      LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
///      OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
///      SOFTWARE.
///      ```
#[cfg_attr(any(), rustfmt::skip)]
#[allow(unused)]
mod __cargo_equip {
    pub(crate) mod crates {
        pub mod strsim {#![forbid(unsafe_code)]use std::char;use std::cmp::{max,min};use std::collections::HashMap;use std::error::Error;use std::fmt::{self,Display,Formatter};use std::hash::Hash;use std::str::Chars;#[derive(Debug,PartialEq)]pub enum StrSimError{DifferentLengthArgs,}impl Display for StrSimError{fn fmt(&self,fmt:&mut Formatter)->Result<(),fmt::Error>{let text=match self{StrSimError::DifferentLengthArgs=>"Differing length arguments provided",};write!(fmt,"{}",text)}}impl Error for StrSimError{}pub type HammingResult=Result<usize,StrSimError>;pub fn generic_hamming<Iter1,Iter2,Elem1,Elem2>(a:Iter1,b:Iter2)->HammingResult where Iter1:IntoIterator<Item=Elem1>,Iter2:IntoIterator<Item=Elem2>,Elem1:PartialEq<Elem2>{let(mut ita,mut itb)=(a.into_iter(),b.into_iter());let mut count=0;loop{match(ita.next(),itb.next()){(Some(x),Some(y))=>if x!=y{count+=1},(None,None)=>return Ok(count),_=>return Err(StrSimError::DifferentLengthArgs),}}}pub fn hamming(a:&str,b:&str)->HammingResult{generic_hamming(a.chars(),b.chars())}pub fn generic_jaro<'a,'b,Iter1,Iter2,Elem1,Elem2>(a:&'a Iter1,b:&'b Iter2)->f64 where&'a Iter1:IntoIterator<Item=Elem1>,&'b Iter2:IntoIterator<Item=Elem2>,Elem1:PartialEq<Elem2>{let a_len=a.into_iter().count();let b_len=b.into_iter().count();if a_len==0&&b_len==0{return 1.0;}else if a_len==0||b_len==0{return 0.0;}else if a_len==1&&b_len==1{return if a.into_iter().eq(b.into_iter()){1.0}else{0.0};}let search_range=(max(a_len,b_len)/2)-1;let mut b_consumed=Vec::with_capacity(b_len);for _ in 0..b_len{b_consumed.push(false);}let mut matches=0.0;let mut transpositions=0.0;let mut b_match_index=0;for(i,a_elem)in a.into_iter().enumerate(){let min_bound=if i>search_range{max(0,i-search_range)}else{0};let max_bound=min(b_len-1,i+search_range);if min_bound>max_bound{continue;}for(j,b_elem)in b.into_iter().enumerate(){if min_bound<=j&&j<=max_bound&&a_elem==b_elem&&!b_consumed[j]{b_consumed[j]=true;matches+=1.0;if j<b_match_index{transpositions+=1.0;}b_match_index=j;break;}}}if matches==0.0{0.0}else{(1.0/3.0)*((matches/a_len as f64)+(matches/b_len as f64)+((matches-transpositions)/matches))}}struct StringWrapper<'a>(&'a str);impl<'a,'b>IntoIterator for&'a StringWrapper<'b>{type Item=char;type IntoIter=Chars<'b>;fn into_iter(self)->Self::IntoIter{self.0.chars()}}pub fn jaro(a:&str,b:&str)->f64{generic_jaro(&StringWrapper(a),&StringWrapper(b))}pub fn generic_jaro_winkler<'a,'b,Iter1,Iter2,Elem1,Elem2>(a:&'a Iter1,b:&'b Iter2)->f64 where&'a Iter1:IntoIterator<Item=Elem1>,&'b Iter2:IntoIterator<Item=Elem2>,Elem1:PartialEq<Elem2>{let jaro_distance=generic_jaro(a,b);let prefix_length=a.into_iter().zip(b.into_iter()).take_while(|&(ref a_elem,ref b_elem)|a_elem==b_elem).count();let jaro_winkler_distance=jaro_distance+(0.1*prefix_length as f64*(1.0-jaro_distance));if jaro_winkler_distance<=1.0{jaro_winkler_distance}else{1.0}}pub fn jaro_winkler(a:&str,b:&str)->f64{generic_jaro_winkler(&StringWrapper(a),&StringWrapper(b))}pub fn generic_levenshtein<'a,'b,Iter1,Iter2,Elem1,Elem2>(a:&'a Iter1,b:&'b Iter2)->usize where&'a Iter1:IntoIterator<Item=Elem1>,&'b Iter2:IntoIterator<Item=Elem2>,Elem1:PartialEq<Elem2>{let b_len=b.into_iter().count();if a.into_iter().next().is_none(){return b_len;}let mut cache:Vec<usize> =(1..b_len+1).collect();let mut result=0;for(i,a_elem)in a.into_iter().enumerate(){result=i+1;let mut distance_b=i;for(j,b_elem)in b.into_iter().enumerate(){let cost=if a_elem==b_elem{0usize}else{1usize};let distance_a=distance_b+cost;distance_b=cache[j];result=min(result+1,min(distance_a,distance_b+1));cache[j]=result;}}result}pub fn levenshtein(a:&str,b:&str)->usize{generic_levenshtein(&StringWrapper(a),&StringWrapper(b))}pub fn normalized_levenshtein(a:&str,b:&str)->f64{if a.is_empty()&&b.is_empty(){return 1.0;}1.0-(levenshtein(a,b)as f64)/(a.chars().count().max(b.chars().count())as f64)}pub fn osa_distance(a:&str,b:&str)->usize{let a_len=a.chars().count();let b_len=b.chars().count();if a==b{return 0;}else if a_len==0{return b_len;}else if b_len==0{return a_len;}let mut prev_two_distances:Vec<usize> =Vec::with_capacity(b_len+1);let mut prev_distances:Vec<usize> =Vec::with_capacity(b_len+1);let mut curr_distances:Vec<usize> =Vec::with_capacity(b_len+1);let mut prev_a_char=char::MAX;let mut prev_b_char=char::MAX;for i in 0..(b_len+1){prev_two_distances.push(i);prev_distances.push(i);curr_distances.push(0);}for(i,a_char)in a.chars().enumerate(){curr_distances[0]=i+1;for(j,b_char)in b.chars().enumerate(){let cost=if a_char==b_char{0}else{1};curr_distances[j+1]=min(curr_distances[j]+1,min(prev_distances[j+1]+1,prev_distances[j]+cost));if i>0&&j>0&&a_char!=b_char&&a_char==prev_b_char&&b_char==prev_a_char{curr_distances[j+1]=min(curr_distances[j+1],prev_two_distances[j-1]+1);}prev_b_char=b_char;}prev_two_distances.clone_from(&prev_distances);prev_distances.clone_from(&curr_distances);prev_a_char=a_char;}curr_distances[b_len]}fn flat_index(i:usize,j:usize,width:usize)->usize{j*width+i}pub fn generic_damerau_levenshtein<Elem>(a_elems:&[Elem],b_elems:&[Elem])->usize where Elem:Eq+Hash+Clone{let a_len=a_elems.len();let b_len=b_elems.len();if a_len==0{return b_len;}if b_len==0{return a_len;}let width=a_len+2;let mut distances=vec![0;(a_len+2)*(b_len+2)];let max_distance=a_len+b_len;distances[0]=max_distance;for i in 0..(a_len+1){distances[flat_index(i+1,0,width)]=max_distance;distances[flat_index(i+1,1,width)]=i;}for j in 0..(b_len+1){distances[flat_index(0,j+1,width)]=max_distance;distances[flat_index(1,j+1,width)]=j;}let mut elems:HashMap<Elem,usize> =HashMap::with_capacity(64);for i in 1..(a_len+1){let mut db=0;for j in 1..(b_len+1){let k=match elems.get(&b_elems[j-1]){Some(&value)=>value,None=>0};let insertion_cost=distances[flat_index(i,j+1,width)]+1;let deletion_cost=distances[flat_index(i+1,j,width)]+1;let transposition_cost=distances[flat_index(k,db,width)]+(i-k-1)+1+(j-db-1);let mut substitution_cost=distances[flat_index(i,j,width)]+1;if a_elems[i-1]==b_elems[j-1]{db=j;substitution_cost-=1;}distances[flat_index(i+1,j+1,width)]=min(substitution_cost,min(insertion_cost,min(deletion_cost,transposition_cost)));}elems.insert(a_elems[i-1].clone(),i);}distances[flat_index(a_len+1,b_len+1,width)]}pub fn damerau_levenshtein(a:&str,b:&str)->usize{let(x,y):(Vec<_>,Vec<_>)=(a.chars().collect(),b.chars().collect());generic_damerau_levenshtein(x.as_slice(),y.as_slice())}pub fn normalized_damerau_levenshtein(a:&str,b:&str)->f64{if a.is_empty()&&b.is_empty(){return 1.0;}1.0-(damerau_levenshtein(a,b)as f64)/(a.chars().count().max(b.chars().count())as f64)}fn bigrams(s:&str)->impl Iterator<Item=(char,char)>+'_{s.chars().zip(s.chars().skip(1))}pub fn sorensen_dice(a:&str,b:&str)->f64{let a:String=a.chars().filter(|&x|!char::is_whitespace(x)).collect();let b:String=b.chars().filter(|&x|!char::is_whitespace(x)).collect();if a.len()==0&&b.len()==0{return 1.0;}if a.len()==0||b.len()==0{return 0.0;}if a==b{return 1.0;}if a.len()==1&&b.len()==1{return 0.0;}if a.len()<2||b.len()<2{return 0.0;}let mut a_bigrams:HashMap<(char,char),usize> =HashMap::new();for bigram in bigrams(&a){*a_bigrams.entry(bigram).or_insert(0)+=1;}let mut intersection_size=0;for bigram in bigrams(&b){a_bigrams.entry(bigram).and_modify(|bi|{if*bi>0{*bi-=1;intersection_size+=1;}});}(2*intersection_size)as f64/(a.len()+b.len()-2)as f64}}
    }

    pub(crate) mod macros {
        pub mod strsim {}
    }

    pub(crate) mod prelude {pub use crate::__cargo_equip::crates::*;}

    mod preludes {
        pub mod strsim {}
    }
}
